# socha

./: .gitignore  Cargo.toml  README.md
examples/: create_connection.rs  create_room_and_observe.rs  i_client_handler_example.rs
src/: error.rs  incoming.rs  internal.rs  lib.rs  neutral.rs  outgoing.rs  socha_com.rs
src/i_client_handler/: handler_trait.rs  mod.rs
tests/: make_unmake_move.rs  server_message_parsing.rs
