[package]
name = "socha"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Communication layer for the software challenge germany 2025"
readme = "README.md"
repository = "https://github.com/simoncreates/socha"

[dependencies]
strong-xml = "0.6.3"
simple-logging = "2.0.2"
log = "0.4.28"
crossbeam-channel = "0.5.15"

[features]

[[example]]
name = "i_client_handler_example"
